Use CSS display to hide menu when closed instead of visibility (resolve a bug in Firefox)

--- a/src/components/styles/_animations.scss
+++ b/src/components/styles/_animations.scss
@@ -9,12 +9,12 @@ $directions: (
 );
 
 @mixin slide($dir) {
-    &--dir-#{$dir} {
-        animation: slide-in-#{$dir} $duration ease-in;
-    }
-
     &--open#{&}--dir-#{$dir} {
         animation: slide-out-#{$dir} $duration ease-out;
+    }
+
+    &--closing#{&}--dir-#{$dir} {
+        animation: slide-in-#{$dir} $duration ease-in;
     }
 }
 
